# advent-of-code

./: .gitignore  README.md  Utils.hs  Zipper.hs  aoc  boilerplate.hs  myutils.cabal  myutils.nix  run.hs
2015/day1/: Main.hs
2015/day10/: day10.hs
2015/day11/: day11  day11.c  solution
2015/day12/: day12.sh  remove_red.jq
2015/day13/: day13.py
2015/day14/: day14.py
2015/day15/: day15.ampl  day15.py
2015/day16/: day16.py
2015/day2/: Wrap.scala
2015/day4/: Makefile  day4.hs
2015/day6/: LightGrid.scala
2015/day7/: day7.hs
2015/day8/: day8.hs
2015/day9/: day9.py
2016/: Utils.hs
2016/day1/: day1.hs
2016/day2/: day2.hs
2016/day3/: day3.hs
2016/day4/: day4.hs
2016/day5/: day5.hs
2016/day6/: day6.hs  input.txt
2016/day7/: day7.hs
2016/day8/: day8.hs
2016/day9/: day9.hs
2017/day1/: day1.hs
2017/day10/: day10.hs
2017/day11/: day11.hs
2017/day12/: day12.hs
2017/day13/: day13.hs
2017/day14/: day14.hs
2017/day15/: day15.hs
2017/day16/: day16.hs
2017/day17/: day17.hs
2017/day18/: day18.hs
2017/day19/: day19.cpp  test.txt
2017/day2/: day2.hs
2017/day20/: day20  day20.hs
2017/day21/: day21.hs  input.txt
2017/day22/: day22.cpp  day22.hs
2017/day23/: day23.hs
2017/day24/: day24.hs
2017/day25/: day25  day25.hs
2017/day3/: day3.hs
2017/day4/: day4.hs
2017/day5/: day5.hs
2017/day6/: day6.hs
2017/day7/: day7.hs
2017/day8/: day8.hs
2017/day9/: day9.hs
2018/: register.h
2018/day1/: day1.hs  day1.sh  (+1 more)
day1/: Main.hs
day2/: Wrap.scala
day3/: Main.hs
day5/: Main.hs
day6/: LightGrid.scala
(+29 files in other folders)
