name: myutils
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple

library
  exposed-modules: Utils, Zipper
  build-depends: base < 5, containers, array, regex-tdfa
  default-language: Haskell2010

-- executable aoc
--     build-depends: base < 5, myutils, turtle
--     main-is: aoc
-- default-language: Haskell2010